--- a/Manuscripts/manuscript.Rmd
+++ b/Manuscripts/manuscript.Rmd
@@ -62,7 +62,7 @@ Another shortcoming of existing EDA tools is their lack of coherence and interac
 
 This section introduces the motivational dataset that will be used through out this manuscript for demonstration purposes, in both Section \ref{sec:app} to explain the mlEDA workflow and functionalities, and Section \ref{sec:case_study} for a data application example to illustrate its practical utlity. This data was collected by the Infant Feeding and Early Development (IFED) study [@Adgent2018IFED], an NIH-funded longitudinal observational study of postnatal development of reproductive system on healthy term infants born in Philadelphia. From August 2010 to November 2013, eligible infants completed the baseline visit within 72 hours after birth. Subsequent visits were every 2-4 weeks. Boys were followed until 28 weeks and girls 36 weeks after birth. At each visit, anthropometry was performed on present participants for a set of group measures, such as length, weight, head circumference, etc. Blood sample collection began at week 2 and was analyzed for hormones (e.g. estrodiol, FSH). In some later weeks, ultrasound was performed immediately before or after regular visits to measure the dimension of organs, such as breast bud bead, thyroid, uterus and ovary. 
 
-The original study intended to explore the effect of feeding regime [@Adgent2018IFED]. Since then, the data set has been explored for a variety of questions regarding early development of the reproductive system[@goldberg2024]. Special interest has been shown in the postnatal activation of Hypothalamic-pituitary-gonadal (HPG) axis activation, often referred to as "minipuburty" in existing literature. During this time, hormones concentration could increase rapidly and stimulates development of target tissues, which can affect growth, body composition and behavioral development. Therefore, minipuburty is considered a critical window for early detection and treatment of disorders of sexual development [@Lucaccioni2021, @Renault2020]. Despite the importance, the biological pathways behind these phenomenon remain unclear. This is largely due to the complexity of multidimensional, dynamic interactions between factors, as well as the large variability in timing and duration of development across individuals. Existing research often uses univariate or pairwise examination, which provides facets of information instead of the full picture \ref{@Chin2023}. The study design of IFED data also poses specific challenges. The schedule of procedures are different between blood sample collection and ultrasound, causing discontinuity in the study of their correlation. Blood samples are consistently collected at each visits starting the second visit, but the hormone concentration is often too low to be detected, causing missing values in large proportion of the sample. This affects the reliability of correlation measure.
+The original study intended to explore the effect of feeding regime [@Adgent2018IFED]. Since then, the data set has been explored for a variety of questions regarding early development of the reproductive system[@goldberg2024, more refs from goldberg]. Special interest has been shown in the postnatal activation of Hypothalamic-pituitary-gonadal (HPG) axis activation, often referred to as "minipuburty" in existing literature. During this time, hormones concentration could increase rapidly and stimulates development of target tissues, which can affect growth, body composition and behavioral development. Therefore, minipuburty is considered a critical window for early detection and treatment of disorders of sexual development [@Lucaccioni2021, @Renault2020]. Despite the importance, the biological pathways behind these phenomenon remain unclear. This is largely due to the complexity of multidimensional, dynamic interactions between factors, as well as the large variability in timing and duration of development across individuals. Existing research often uses univariate or pairwise examination, which provides facets of information instead of the full picture \ref{@Chin2023}. The study design of IFED data also poses specific challenges. The schedule of procedures are different between blood sample collection and ultrasound, causing discontinuity in the study of their correlation. Blood samples are consistently collected at each visits starting the second visit, but the hormone concentration is often too low to be detected, causing missing values in large proportion of the sample. This affects the reliability of correlation measure.
 
 In the following sections we will explore.... we will only be using girls because of previous papers... 
 
